force-app/main/default/objects/SalesAreaLink__c/SalesAreaLink__c.object-meta.xml
<CustomObject>
    <description>Establishes n:m relation between Sales Area and Account.</description>
    <label>Sales Area Link</label>
    <nameField>
        <displayFormat>SAL-{000000}</displayFormat>
        <label>Sales Area Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Area Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>