force-app/main/default/objects/SalesAreaLink__c/fields/chk_CompleteDelivery__c.field-meta.xml
<CustomField>
    <fullName>chk_CompleteDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether a sales order must be delivered completely in a single delivery or whether the order can be partially delivered and completed over a number of deliveries.</inlineHelpText>
    <label>Complete Delivery</label>
    <type>Checkbox</type>
</CustomField>