force-app/main/default/objects/SalesAreaLink__c/fields/chk_Deletionflagforcustomer__c.field-meta.xml
<CustomField>
    <fullName>chk_Deletionflagforcustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deletion Flag of an Account for a certain Sales Area</description>
    <inlineHelpText>Indicates that all data in the master record will be deleted for the specified sales area. Before the deletion is made, the system checks for dependent data that would prevent the deletion.</inlineHelpText>
    <label>Deletion flag for customer</label>
    <type>Checkbox</type>
</CustomField>