force-app/main/default/objects/SalesAreaLink__c/fields/chk_Rebate__c.field-meta.xml
<CustomField>
    <fullName>chk_Rebate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Rebate of an Account for a certain Sales Area</description>
    <inlineHelpText>Indicates whether a customer may be granted a rebate.</inlineHelpText>
    <label>Rebate</label>
    <type>Checkbox</type>
</CustomField>