force-app/main/default/objects/SalesAreaLink__c/fields/ftxt_DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>ftxt_DistributionChannel__c</fullName>
    <description>Pull Input from Sale Area Distribution Channel</description>
    <formula>TEXT(mdr_SalesArea__r.pkl_DistributionChannel__c)</formula>
    <label>Distribution Channel</label>
    <type>Text</type>
</CustomField>