force-app/main/default/objects/SalesAreaLink__c/fields/ftxt_Division__c.field-meta.xml
<CustomField>
    <fullName>ftxt_Division__c</fullName>
    <formula>TEXT( mdr_SalesArea__r.pkl_Division__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division</label>
    <type>Text</type>
</CustomField>