force-app/main/default/objects/SalesAreaLink__c/fields/ftxt_SalesArea__c.field-meta.xml
<CustomField>
    <fullName>ftxt_SalesArea__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, ftxt_SalesAreaName__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SalesArea</label>
    <type>Text</type>
</CustomField>