force-app/main/default/objects/SalesAreaLink__c/fields/ftxt_SalesAreaName__c.field-meta.xml
<CustomField>
    <fullName>ftxt_SalesAreaName__c</fullName>
    <formula>ftxt_SalesOrg__c &amp; &#39;-&#39; &amp; ftxt_Division__c &amp; &#39;-&#39; &amp; ftxt_DistributionChannel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Area Name</label>
    <type>Text</type>
</CustomField>