force-app/main/default/objects/SalesAreaLink__c/fields/ftxt_SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>ftxt_SalesOrg__c</fullName>
    <formula>TEXT( mdr_SalesArea__r.pkl_SalesOrg__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Org</label>
    <type>Text</type>
</CustomField>