force-app/main/default/objects/SalesAreaLink__c/fields/mdr_Account__c.field-meta.xml
<CustomField>
    <fullName>mdr_Account__c</fullName>
    <description>Create connection between Sales Area Link and Account object</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Areas</relationshipLabel>
    <relationshipName>SalesAreaLinks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>