force-app/main/default/objects/SalesAreaLink__c/fields/mdr_SalesArea__c.field-meta.xml
<CustomField>
    <fullName>mdr_SalesArea__c</fullName>
    <description>Create connection between Sales Area Link and Sales Area object</description>
    <label>Sales Area</label>
    <referenceTo>SalesArea__c</referenceTo>
    <relationshipLabel>Sales Area Links</relationshipLabel>
    <relationshipName>SalesAreaLinks</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>