force-app/main/default/objects/SalesAreaLink__c/fields/pkl_BillingBlockforCustomer__c.field-meta.xml
<CustomField>
    <fullName>pkl_BillingBlockforCustomer__c</fullName>
    <inlineHelpText>Indicates if further billing activities are blocked for the customer. The block applies throughout the specified sales area. If you enter a blocking indicator, billing that is already underway is continued. However, you cannot process the document further.</inlineHelpText>
    <label>Billing Block for Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_block_for_customer</valueSetName>
    </valueSet>
</CustomField>