force-app/main/default/objects/SalesAreaLink__c/fields/pkl_Currency__c.field-meta.xml
<CustomField>
    <fullName>pkl_Currency__c</fullName>
    <description>Currency of an Account for a certain Sales Area</description>
    <inlineHelpText>Customer&#39;s currency for a sales area. This currency will be used to settle the customer&#39;s charges for the given sales organization.</inlineHelpText>
    <label>Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pkl_ConditionCurrency</valueSetName>
    </valueSet>
</CustomField>