force-app/main/default/objects/SalesAreaLink__c/fields/pkl_CustomerBillingBlock__c.field-meta.xml
<CustomField>
    <fullName>pkl_CustomerBillingBlock__c</fullName>
    <label>Customer Billing Block</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Billing_Block</valueSetName>
    </valueSet>
</CustomField>