force-app/main/default/objects/SalesAreaLink__c/fields/pkl_CustomerDeliveryBlock__c.field-meta.xml
<CustomField>
    <fullName>pkl_CustomerDeliveryBlock__c</fullName>
    <inlineHelpText>Indicates if further delivery processing is blocked for the customer. The block applies throughout the specified sales area. If you enter a blocking indicator, delivery processing that is already underway is continued. However, no new processing can take place.</inlineHelpText>
    <label>Customer Delivery Block</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Delivery_Block</valueSetName>
    </valueSet>
</CustomField>