force-app/main/default/objects/SalesAreaLink__c/fields/pkl_CustomerGroup1__c.field-meta.xml
<CustomField>
    <fullName>pkl_CustomerGroup1__c</fullName>
    <description>Customer Group 1 of an Account for a certain Sales Area</description>
    <inlineHelpText>Customer group 1. Specifies a customer-defined group of customers. You can define up to five different groups of customers, according to the needs of your organization. You specify the groups in the customer master record under &quot;Additional data&quot;. If you assign a particular customer to one or more groups, the system automatically displays the groups in the header data of corresponding sales orders</inlineHelpText>
    <label>Customer Group 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Group_1</valueSetName>
    </valueSet>
</CustomField>