force-app/main/default/objects/SalesAreaLink__c/fields/pkl_CustomerGroup__c.field-meta.xml
<CustomField>
    <fullName>pkl_CustomerGroup__c</fullName>
    <inlineHelpText>Identifies a particular group of customers (for example, wholesale or retail) for the purpose of pricing or generating statistics.You can freely define customer groups according to the needs of your organization. You assign a customer group to an individual customer in either the customer master record of the sold-to party or in the sales document. In SD Customizing, you can create a condition type that lets you create pricing records for customer groups. Additionally, when you want to generate sales stat</inlineHelpText>
    <label>Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Group</valueSetName>
    </valueSet>
</CustomField>