force-app/main/default/objects/SalesAreaLink__c/fields/pkl_CustomerOrderBlock__c.field-meta.xml
<CustomField>
    <fullName>pkl_CustomerOrderBlock__c</fullName>
    <inlineHelpText>Indicates if further sales order processing is blocked for the customer. The block applies throughout the specified sales area.</inlineHelpText>
    <label>Customer Order Block</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Order_Block</valueSetName>
    </valueSet>
</CustomField>