force-app/main/default/objects/SalesAreaLink__c/fields/pkl_CustomerPriceGroup__c.field-meta.xml
<CustomField>
    <fullName>pkl_CustomerPriceGroup__c</fullName>
    <description>Customer Price Group of an Account for a certain Sales Area</description>
    <inlineHelpText>A grouping of customers who share the same pricing requirements.</inlineHelpText>
    <label>Customer Price Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Price_Group</valueSetName>
    </valueSet>
</CustomField>