force-app/main/default/objects/SalesAreaLink__c/fields/pkl_CustPricProcedure__c.field-meta.xml
<CustomField>
    <fullName>pkl_CustPricProcedure__c</fullName>
    <description>Account Pricing Procedure of an Account for a certain Sales Area</description>
    <inlineHelpText>Determines which pricing procedure the system should apply when you create a sales document for the customer.</inlineHelpText>
    <label>Cust. Pric. Procedure</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cust_Pric_Procedure</valueSetName>
    </valueSet>
</CustomField>