force-app/main/default/objects/SalesAreaLink__c/fields/pkl_INCOTerms1__c.field-meta.xml
<CustomField>
    <fullName>pkl_INCOTerms1__c</fullName>
    <description>Defines the terms of sales and the passing of risks.</description>
    <inlineHelpText>An incoterms version is an edition containing a list of international terms for transportation that is defined by the International Chamber of Commerce (ICC).</inlineHelpText>
    <label>Incoterm</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>INCOTerms1</valueSetName>
    </valueSet>
</CustomField>