force-app/main/default/objects/SalesAreaLink__c/fields/pkl_InvoicingDates__c.field-meta.xml
<CustomField>
    <fullName>pkl_InvoicingDates__c</fullName>
    <description>Invoicing Date of the Account for a certain Sales Area</description>
    <inlineHelpText>Paper contract Terms of Payment = Invoicing date frequency. If, for example, a customer wants to consolidate the invoices you send out, you can predefine the billing schedule in a calendar in the system. During billing, the system automatically proposes the appropriate billing date from the calendar.</inlineHelpText>
    <label>Invoicing Dates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoicing_Dates</valueSetName>
    </valueSet>
</CustomField>