force-app/main/default/objects/SalesAreaLink__c/fields/pkl_MaxPartDeliveries__c.field-meta.xml
<CustomField>
    <fullName>pkl_MaxPartDeliveries__c</fullName>
    <inlineHelpText>The maximum number of partial deliveries you can make (including the first delivery) to satisfy the order quantity for an item.</inlineHelpText>
    <label>Max.Part.Deliveries</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Max_Part_Deliveries</valueSetName>
    </valueSet>
</CustomField>