force-app/main/default/objects/SalesAreaLink__c/fields/pkl_Partdlvitem__c.field-meta.xml
<CustomField>
    <fullName>pkl_Partdlvitem__c</fullName>
    <inlineHelpText>You use this field to control partial deliveries at the item level. If the customer allows partial delivery, you can choose from different partial delivery options. For example, you can specify whether the customer allows you to make one delivery attempt only on the requested delivery date or whether unlimited delivery attempts are possible.</inlineHelpText>
    <label>Part.dlv./item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Part_dlv_item</valueSetName>
    </valueSet>
</CustomField>