force-app/main/default/objects/SalesAreaLink__c/fields/pkl_PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>pkl_PaymentTerms__c</fullName>
    <description>Payment terms of an Account for a certain Sales Area</description>
    <inlineHelpText>Key for defining payment terms composed of cash discount percentages and payment periods.</inlineHelpText>
    <label>Payment terms</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__PaymentTerm</valueSetName>
    </valueSet>
</CustomField>