force-app/main/default/objects/SalesAreaLink__c/fields/pkl_SalesBlockCustomer__c.field-meta.xml
<CustomField>
    <fullName>pkl_SalesBlockCustomer__c</fullName>
    <description>Sales Block of an Account for a certain Sales Area</description>
    <inlineHelpText>Block Sales Support - Sales Block for Customer (Sales Area)</inlineHelpText>
    <label>Sales Block Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Block_Customer</valueSetName>
    </valueSet>
</CustomField>