force-app/main/default/objects/SalesAreaLink__c/fields/pkl_ShippingConditions__c.field-meta.xml
<CustomField>
    <fullName>pkl_ShippingConditions__c</fullName>
    <inlineHelpText>General shipping strategy for the delivery of goods from the vendor to the customer.A particular customer always requires immediate delivery. You enter the appropriate shipping condition into the customer master record. This means that when you process orders for this customer, the system automatically proposes the express mail room as a shipping point and the quickest way to the airport as a route.</inlineHelpText>
    <label>Shipping Conditions</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shipping_Conditions</valueSetName>
    </valueSet>
</CustomField>