force-app/main/default/objects/SalesAreaLink__c/fields/txt_Accountatcustomer__c.field-meta.xml
<CustomField>
    <fullName>txt_Accountatcustomer__c</fullName>
    <description>This field contains the account number your company is listed under at the customer or vendor.</description>
    <inlineHelpText>Shipper&#39;s (Our) Account Number at the Customer or Vendor. This field contains the account number your company is listed under at the customer or vendor.</inlineHelpText>
    <label>Account at customer</label>
    <length>12</length>
    <type>Text</type>
</CustomField>