force-app/main/default/objects/SalesAreaLink__c/fields/txt_CustomerStatus__c.field-meta.xml
<CustomField>
    <fullName>txt_CustomerStatus__c</fullName>
    <inlineHelpText>Field will be used to document reason for setting customer to not active.</inlineHelpText>
    <label>Customer Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>