force-app/main/default/objects/SalesAreaLink__c/fields/txt_INCOTerms2__c.field-meta.xml
<CustomField>
    <fullName>txt_INCOTerms2__c</fullName>
    <description>Incoterm Location of the Account for a certain Sales Area</description>
    <inlineHelpText>Additional information for the primary Incoterm. If the primary Incoterm is, for example, FOB (&quot;Free on Board&quot;), then the second field provides details of the port from which the delivery leaves (for example, &quot;FOB Boston&quot;).</inlineHelpText>
    <label>INCOTERM   Location</label>
    <length>28</length>
    <required>true</required>
    <type>Text</type>
</CustomField>